biblioteca, slider index, proyectos

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -67,14 +67,14 @@
         </nav>      
     </header>
     <div class="container">
-        <main>
-            <p>Desde Consciente Colectivo creemos que compartir e intercambiar información es un proceso necesario para generar una mayor visibilidad, y en consecuencia una    movilización más dinámica, por las problemáticas socioambientales. Es por eso que decidimos crear una biblioteca de contenidos participativa: Enviamos tu recomendación    de contenido (película, libro, documental) para ayudarnos a mantener este espacio siempre al día, y generar así una red de intercambio colectiva que nos enriquezca a  todxs.</p>
+        <main class="biblioteca">
+            <p>Desde Consciente Colectivo creemos que compartir e intercambiar información es un proceso necesario para generar una mayor visibilidad, y en consecuencia una movilización más dinámica, por las problemáticas socioambientales. Es por eso que decidimos crear una biblioteca de contenidos participativa: Enviamos tu recomendación de contenido (película, libro, documental) para ayudarnos a mantener este espacio siempre al día, y generar así una red de intercambio colectiva que nos enriquezca a  todxs.</p>
         </main>
         <section class="secciones">
-            <a href="documentales.html">Documentales</a>
-            <a href="peliculas.html">Películas y Series</a>
-            <a href="libros.html">Libros</a>
-            <a href="mas.html">Más Recursos</a>
+            <div><a href="documentales.html">Documentales</a></div>
+            <div><a href="peliculas.html">Películas y Series</a></div>
+            <div><a href="libros.html">Libros</a></div>
+            <div><a href="mas.html">Más Recursos</a></div>
         </section>
     </div>
     <footer>
