--- a/index.html
+++ b/index.html
@@ -67,9 +67,33 @@
         </nav>      
     </header>
     <div class="container">
-        
         <section>
-            slider
+            <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-interval="5000">
+                        <img src="https://via.placeholder.com/1000x425" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item" data-interval="5000">
+                        <img src="https://via.placeholder.com/1000x425" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item" data-interval="5000">
+                        <img src="https://via.placeholder.com/1000x425" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </section>
         <section>
             <h3 class="frase">Frente a la crisis climática y ambiental:</h3>
