--- a/proyectos.html
+++ b/proyectos.html
@@ -107,7 +107,7 @@
     </article>
     <article id="accion-barrial">
         <div class="container">
-            <div class="img"><img class="proyectos" src="img/8B.jpg" alt="Huerta"></div>
+            <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Huerta"></div>
             <h3>Acción Barrial:</h3>
             <p>Estamos convencidxs que el trabajo territorial es fundamental para generar cambios. Es por eso que militamos la Soberanía Alimentaria en los barrios. En conjunto con lxs vecinxs de Fuerte Apache y Barrio Evita, construimos 5 huertas en distintos espacios del barrio donde antes habían canteros, basurales o tierras ociosas, para que puedan cosechar alimentos sanos y seguros, y utilizarse en los comedores para las ollas populares. Aprendemos en conjunto a plantar, cuidar y cosechar la huerta.</p>
         </div>    
@@ -125,6 +125,6 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
 </html>
