--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         </section>
     <div class="container">
         <section>
-            <h2>-Proyectos Actuales-</h2>
+            <h2>Proyectos Actuales</h2>
             <div class="proyectos">
                 <div class="img-index1">
                     <div class="img-info">
-                        <a href="proyectos.html#etiquetado"><h6>Etiquetado</h6></a>
+                        <a href="proyectos.html#etiquetado"><h6>Etiquetado Frontal</h6></a>
                     </div>
                 </div>
                 <div class="img-index2">
