correccion botones involucrate

--- a/proyectos.html
+++ b/proyectos.html
@@ -80,7 +80,7 @@
     <article id="etiquetado">
         <div class="container">
             <div class="img"><img class="proyectos" src="https://via.placeholder.com/1000x425" alt="Manifestación"></div>
-            <h3>Etiquetado:</h3>
+            <h3>Etiquetado frontal:</h3>
             <p>Utilizamos diversas estrategias para que el proyecto de Promoción de la Alimentación Saludable sea ley:</p>
             <ol>
                 <li>Trabajamos en coalición con diferentes organizaciones como Fundeps, FIC, Consumidores Argentinos, Museo del Hambre, FAGRAN, Sanar nutrición. Logramos llegar a  audiencias más amplias en las redes sociales y en el contacto con nuestros representantes.</li>
