--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -102,7 +102,7 @@
     </article>
     <article id="diferencial">
         <div class="container">
-            <h2 class="wow animate__animated animate__pulse">- Nuestros Valores -</h2>
+            <h2 class="wow animate__animated animate__pulse">Nuestros Valores</h2>
             <div class="valores">
                 <section class="reconocimiento">
                     <div class="img"><img src="img/valores/reconocimiento.webp" alt="Reconocimiento"></div>
