2 ejemplos de libros

--- a/busquedas-laborales.html
+++ b/busquedas-laborales.html
@@ -117,7 +117,7 @@
                 <li>Capacidad para presentar nuevas ideas transformadoras.</li>
                 <li>Ambición de crecimiento personal por fuera del espacio (capacitaciones, cursos, lectura, investigación, etc.).</li>
             </ul>
-            <p>Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
         <article id="logistica">
             <h3>Acción</h3>
@@ -158,7 +158,7 @@
                 <li>Capacidad para presentar nuevas ideas transformadoras.</li>
                 <li>Ambición de crecimiento personal por fuera del espacio (capacitaciones, cursos, lectura, investigación, etc.). </li>
             </ul>
-            <p>Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
         <article id="recaudador-fondos">
             <h3>Desarrollo Institucional</h3>
@@ -197,7 +197,7 @@
                 <li>Capacidad para presentar nuevas ideas transformadoras.</li>
                 <li>Ambición de crecimiento personal por fuera del espacio (capacitaciones, cursos, lectura, investigación, etc.).</li>
             </ul>
-            <p>Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Cabe destacar que es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
         <article id="community-manager">
             <h3>Comunicación</h3>
@@ -235,7 +235,7 @@
                 <li>Conocimientos en diseño web con plataforma Wix (no excluyente).</li>
                 <li>Manejo de herramientas de medición de social media (no excluyente).</li>
             </ul>
-            <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
         <article id="editor-audiovisual">
             <h3>Comunicación</h3>
@@ -271,7 +271,7 @@
                 <li>Proactividad y ganas de trabajar en equipo.</li>
                 <li>Conocimientos de After Effects o Animación (no excluyente).</li>
             </ul>
-            <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
         <article id="diseniador-grafico">
             <h3>Comunicación</h3>
@@ -306,7 +306,7 @@
                 <li>El compromiso individual con las causas sociales y ambientales.</li>
                 <li>Proactividad y ganas de trabajar en equipo.</li>
             </ul>
-            <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
         <article id="asistente-twitter">
             <h3>Comunicación</h3>
@@ -346,7 +346,7 @@
                 <li>Proactividad y ganas de trabajar en equipo.</li>
                 <li>Experiencia en manejo de cuentas de Twitter institucionales (no excluyente).</li>
             </ul>
-            <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>
         <article id="investigador-politico">
             <h3>Política</h3>
@@ -383,7 +383,7 @@
                 <li>Proactividad y ganas de trabajar en equipo.</li>
                 <li>Conocimientos sobre el ámbito político argentino.</li>
             </ul>
-            <p>Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
+            <p class="semidestacado">Es una actividad voluntaria, ninguno de nuestros puestos es remunerado.</p>
         </article>  
     </div>
     <footer>
