--- a/libros.html
+++ b/libros.html
@@ -72,11 +72,12 @@
             <div class="libros">
                 <section>
                     <h3>Pensamiento profundo</h3>
-                    <div>
-                        <h4>La historia de las cosas</h4>
-                        <div class="img"><img src="img/libros/la historia de las cosas.jpeg" alt=""></div>
-                        <p>Tenemos un verdadero problema con las COSAS que nos rodean. ¿De dónde vienen las COSAS que compramos? ¿Adónde van a parar cuando las tiramos? ¿Cuáles son los    costos ecológicos y sociales del crecimiento económico que buscamos permanentemente? ¿Cómo se producen, se distribuyen, se consumen y adónde van nuestras COSAS    cuando las tiramos?</p>
-                        <h5>Annie Leonard</h5>
+                    <div class="libro1">
+                        <div class="info-libro1">
+                            <h4>La historia de las cosas</h4>
+                            <p>Tenemos un verdadero problema con las COSAS que nos rodean. ¿De dónde vienen las COSAS que compramos? ¿Adónde van a parar cuando las tiramos? ¿Cuáles son los    costos ecológicos y sociales del crecimiento económico que buscamos permanentemente? ¿Cómo se producen, se distribuyen, se consumen y adónde van nuestras COSAS    cuando las tiramos?</p>
+                            <h5>Annie Leonard</h5>
+                        </div>
                     </div>
                     <div>
                         <h4>El ecologismo de los pobres: conflictos ambientales y lenguajes de valoración</h4>
@@ -99,12 +100,28 @@
                     </div>
                 </section>
                 <section>
-                    <h3>Desarrollo y Economía</h3>
+                    <h3>Desarrollo y Economía</h3> 
                     <div>
-                        <h4>Cambio climático, economía y desigualdad</h4>
-                        <img src="" alt="">
-                        <p>¿Qué relación hay entre el crecimiento económico y el cambio climático? Horacio Fazio desmonta los difundidos argumentos que atribuyen el problema climático     a una supuesta sobrepoblación del planeta mediante una tesis novedosa. </p>
-                        <h5>Horacio Fazio</h5>
+                        <img src="img/libros/5.jpeg" width="300px" height="400px" data-toggle="modal" data-target="#Modal" alt="">
+                    </div>
+                    <div id="Modal" class="modal" tabindex="-1">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Cambio climático, economía y desigualdad</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>¿Qué relación hay entre el crecimiento económico y el cambio climático? Horacio Fazio desmonta los difundidos argumentos que atribuyen el problema climático     a una supuesta sobrepoblación del planeta mediante una tesis novedosa. </p>
+                                    <h6>Horacio Fazio</h6>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <h4>Prosperidad sin crecimiento: Economía para un planeta finito</h4>
