Modifique colores de algunas secciones, hice carrousel biblio y termine libros

--- a/busquedas-laborales.html
+++ b/busquedas-laborales.html
@@ -66,6 +66,17 @@
             </div>
         </nav>      
     </header>
+    <main class="busquedas">
+        <div class="container busquedas">
+            <div class="item1">
+                <h2>Búsquedas</h2>
+                <h2>laborales</h2>
+            </div>
+            <div class="item2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quam iure adipisci voluptate sequi nulla illum accusantium, harum ex itaque architecto fugit quos fuga cumque impedit. Eveniet libero voluptatibus recusandae ab odio culpa similique assumenda, quae sunt dignissimos reprehenderit, quidem hic quasi porro cum placeat. A vero ullam soluta debitis!</p>
+            </div>
+        </div>
+    </main> 
     <div class="container" id="busquedas-laborales">
         <ul class="trabajo">
             <li class="accion menu trabajo-territorial"><a class="busqueda" href="#trabajo-territorial">Trabajo territorial</a></li>
