--- a/biblioteca.html
+++ b/biblioteca.html
@@ -66,17 +66,67 @@
             </div>
         </nav>      
     </header>
-    <div class="container">
-        <main class="biblioteca">
+    <main class="biblioteca">
+        <div class="container">
+            <h1>Biblioteca</h1>
             <p>Desde Consciente Colectivo creemos que compartir e intercambiar información es un proceso necesario para generar una mayor visibilidad, y en consecuencia una movilización más dinámica, por las problemáticas socioambientales. Es por eso que decidimos crear una biblioteca de contenidos participativa: Enviamos tu recomendación de contenido (película, libro, documental) para ayudarnos a mantener este espacio siempre al día, y generar así una red de intercambio colectiva que nos enriquezca a  todxs.</p>
-        </main>
-        <section class="secciones">
-            <div><a href="documentales.html">Documentales</a></div>
-            <div><a href="peliculas.html">Películas y Series</a></div>
-            <div><a href="libros.html">Libros</a></div>
-            <div><a href="mas.html">Más Recursos</a></div>
-        </section>
+        </div>
+    </main>
+    <div class="container libros-destacados">
+        <div class="contenedor-titulos-controles">
+            <div class="titulo">
+                <h3>Libros</h3>
+                <a href="libros.html">Ver más</a>
+            </div>
+            <div class="indicadores"></div>
+        </div>
+        <div class="contenedor-principal">
+            <button role="button" id="flecha-izquierda" class="flecha-izquierda"><img src="img/left-arrow.png" alt="Flecha izquierda"></button>
+            <div class="contenedor-carrousel">
+                <div class="carrousel">
+                    <div class="libro-carrousel">
+                        <a href="libros.html#la-historia-de-las-cosas"><img width="250px" src="img/libros/libro1.jpeg" alt="La historia de las cosas"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#el-ecologismo-de-los-pobres"><img width="250px" src="img/libros/libro2.jpeg" alt="El ecologismo de los pobres"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#primavera-silenciosa"><img width="250px" src="img/libros/libro3.jpeg" alt="Primavera silenciosa"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#cambio-climatico-economia-desigualdad"><img width="250px" src="img/libros/libro5.jpeg" alt="Cambio climático, economía y desigualdad"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#prosperidad-sin-crecimiento"><img width="250px" src="img/libros/libro6.jpeg" alt="Prosperidad sin crecimiento"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#economia-rosquilla"><img width="250px" src="img/libros/libro7.jpeg" alt="Economía rosquilla"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#el-valor-de-las-cosas"><img width="250px" src="img/libros/libro8.jpeg" alt="El valor de las cosas"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#La-naturaleza-es-un-campo-de-batalla"><img width="250px" src="img/libros/libro9.jpeg" alt="La naturaleza es un campo de batalla"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#guerras-climaticas"><img width="250px" src="img/libros/libro10.jpeg" alt="Guerras climáticas"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#pueblos-indigenas-en-la-argentina"><img width="250px" src="img/libros/libro12.jpeg" alt="Pueblos indígenas en la Argentina"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#libro13"><img width="250px" src="img/libros/libro13.jpeg" alt="Mala leche"></a>
+                    </div>
+                    <div class="libro-carrousel">
+                        <a href="libros.html#libro14"><img width="250px" src="img/libros/libro14.jpeg" alt="Malcomidos"></a>
+                    </div>
+                </div>
+            </div>
+            <button role="button" id="flecha-derecha" class="flecha-derecha"><img src="img/right-arrow.png" alt="Flecha derecha"></button>
+        </div>
     </div>
+
+
     <footer>
         <div class="container">
             <h6>¡Seguinos!</h6>
@@ -91,5 +141,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"     crossorigin="anonymous"></script>
+    <script src="js/carrousel.js"></script>
 </body>
 </html>
