Agregue animaciones a encabezados y modifique Involucrate

--- a/involucrate.html
+++ b/involucrate.html
@@ -66,23 +66,25 @@
             </div>
         </nav>      
     </header>
-    <h1>Involucrate</h1>
-    <article id="dona">
-        <div class="container">
-            <div class="img"><img src="img/6B.jpg" alt="Ecocidio"></div>
-            <h3>Doná ahora!</h3>
-            <p>Cada dia seguimos trabajando para mejorar nuestro planeta, ayudanos!</p>
-            <p>Cualquier monto hace la diferencia!</p>
-            <a class="dona" href="https://cafecito.app/conscientecolectivo">Hacé click acá</a>
-        </div>
-    </article>
-    <article id="sumate">
-        <div class="container">
-            <h3>Sumate a nuestro equipo y se parte de la transformación</h3>
-            <p>Acompañanos siendo parte de esta transformación! Dona tu tiempo y ayudanos a seguir luchando por un mejor planeta para todos</p>
-            <a class="sumate" href="https://docs.google.com/forms/d/e/1FAIpQLSdD_skT48_5wrUdjlV8LCl1KbKK6ziLSnZ03rjwKFSCovAynw/viewform">Hacé click acá</a>
-        </div>
-    </article>
+    <h1 class="titulo-involucrate">Involucrate</h1>
+    <div class="involucrate">
+        <article id="dona">
+            <div class="container">
+                <!-- <div class="img"><img class="img-involucrate" src="img/6B.jpg" alt="Ecocidio"></div> -->
+                <h3>Doná ahora!</h3>
+                <p>Cada dia seguimos trabajando para mejorar nuestro planeta, ayudanos!</p>
+                <p>Cualquier monto hace la diferencia!</p>
+                <a class="dona" href="https://cafecito.app/conscientecolectivo">Hacé click acá</a>
+            </div>
+        </article>
+        <article id="sumate">
+            <div class="container">
+                <h3>Sumate a nuestro equipo y se parte de la transformación</h3>
+                <p>Acompañanos siendo parte de esta transformación! Dona tu tiempo y ayudanos a seguir luchando por un mejor planeta para todos</p>
+                <a class="sumate" href="https://docs.google.com/forms/d/e/1FAIpQLSdD_skT48_5wrUdjlV8LCl1KbKK6ziLSnZ03rjwKFSCovAynw/viewform">Hacé click acá</a>
+            </div>
+        </article>
+    </div>
     <footer>
         <div class="container">
             <h6>¡Seguinos!</h6>
