--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -71,7 +71,7 @@
         <div class="container">
             <h1 class="wow animate__animated animate__pulse">¿Quiénes Somos?</h1>
             <section class="quienes-somos">
-                <div class="img-quienes-somos"><img src="img/1.jpg" alt=""></div>
+                <div class="img-quienes-somos"><img class="img-quienes" src="img/1.jpg" alt="Congreso"></div>
                 <div class="item-derecha wow animate__animated animate__fadeInTopRight">
                     <h3>¿Por qué nace Consciente Colectivo?</h3>
                     <p>Porque estamos convencidxs de que para generar acciones y medidas reales, urgentes, y necesarias, debemos asumir que la construcción es colectiva. Por eso,  nos propusimos formar un espacio abierto que funcione de manera colaborativa con otras organizaciones, para complementarnos y compartir recursos, logrando así   una mayor visibilización de estas problemáticas.</p>
@@ -82,10 +82,10 @@
                     <h3>¿Por qué socioambiental?</h3>
                     <p>Porque creemos indudablemente que para abordar las diversas problemáticas ambientales, debemos primero comprender el contexto social en el cual se   desarrollan. Hoy habitamos un país con un 50% de pobreza entre su población. Lo socioambiental tiene que ver con lo económico, lo político, y lo cultural: sólo   atravesando estos aspectos de manera transversal, podremos tener una visión más amplia del contexto local, regional y global que hoy nos envuelve.</p>
                 </div>
-                <div class="img-quienes-somos"><img src="img/8B.jpg" alt=""></div>
+                <div class="img-quienes-somos"><img class="img-quienes" src="img/8B.jpg" alt="Huerta"></div>
             </section>
             <section class="quienes-somos">
-                <div class="img-quienes-somos"><img src="img/5.jpg" alt=""></div>
+                <div class="img-quienes-somos"><img class="img-quienes" src="img/5.jpg" alt="Manifestación"></div>
                 <div class="item-derecha wow animate__animated animate__fadeInRight">
                     <h3>¿Qué queremos?</h3>
                     <p>Que la crisis social, climática y ambiental, sea considerada una prioridad, comprendiendo que afecta a la población en conjunto, y debe ser tratada en   carácter de urgencia. Si bien buscamos responder, desde el activismo, a la mayor suma de problemáticas posibles, adjudicando la importancia que corresponde a     cada una, nuestro foco atraviesa principalmente, la salud, el ambiente, y la materia social. </p>
@@ -96,7 +96,7 @@
                     <h3>¿Cómo nos organizamos internamente?</h3>
                     <p>Existen cinco áreas de trabajo dentro de Consciente Colectivo: Educación, Acción, Desarrollo Institucional, Incidencia política,  y Comunicación. La división    de áreas nace, naturalmente, con el fin de poder afrontar de manera localizada las diversas facetas de las problemáticas que abarcamos, tomando el compromiso y    responsabilidad que cada una de ellas requiere. </p>
                 </div>
-                <div class="img-quienes-somos"><img src="img/3.jpg" alt=""></div>
+                <div class="img-quienes-somos"><img class="img-quienes" src="img/3.jpg" alt="Trabajo Social"></div>
             </section>
         </div>
     </article>
