--- a/biblioteca.html
+++ b/biblioteca.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Biblioteca | Consciente Colectivo</title>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -67,7 +68,7 @@
         </nav>      
     </header>
     <main class="biblioteca">
-        <div class="container">
+        <div class="container wow animate__animated animate__slideInRight">
             <h1>Biblioteca</h1>
             <p>Desde Consciente Colectivo creemos que compartir e intercambiar información es un proceso necesario para generar una mayor visibilidad, y en consecuencia una movilización más dinámica, por las problemáticas socioambientales. Es por eso que decidimos crear una biblioteca de contenidos participativa: Enviamos tu recomendación de contenido (película, libro, documental) para ayudarnos a mantener este espacio siempre al día, y generar así una red de intercambio colectiva que nos enriquezca a  todxs.</p>
         </div>
@@ -142,5 +143,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"     crossorigin="anonymous"></script>
     <script src="js/carrousel.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
