--- a/proyectos.html
+++ b/proyectos.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Proyectos | Consciente Colectivo</title>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -68,11 +69,11 @@
     </header>
     <main class="proyectos">
         <div class="container proyectos">
-            <div class="item1">
+            <div class="item1 wow animate__animated animate__slideInDown">
                 <h2>Proyectos</h2>
                 <h2>actuales</h2>
             </div>
-            <div class="item2">
+            <div class="item2 wow animate__animated animate__slideInDown">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quam iure adipisci voluptate sequi nulla illum accusantium, harum ex itaque architecto fugit quos fuga cumque impedit. Eveniet libero voluptatibus recusandae ab odio culpa similique assumenda, quae sunt dignissimos reprehenderit, quidem hic quasi porro cum placeat. A vero ullam soluta debitis!</p>
             </div>
         </div>
@@ -126,5 +127,9 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
