Cambie cards involucrate, mayuscula proyectos actuales index

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
     <div class="container">
         <section>
-            <h2>Proyectos Actuales</h2>
+            <h2>Proyectos actuales</h2>
             <div class="proyectos">
                 <div class="img-index1">
                     <div class="img-info">
