--- a/involucrate.html
+++ b/involucrate.html
@@ -66,20 +66,25 @@
             </div>
         </nav>      
     </header>
-    <h1 class="titulo-involucrate">Involucrate</h1>
+    <main>
+        <div class="container">
+            <h1 class="titulo-involucrate">Involucrate</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ipsum assumenda earum fugiat mollitia quaerat possimus sint. Doloribus facere distinctio deserunt in nam facilis optio, magnam iste. Architecto, fuga voluptatibus!
+            Corrupti nam incidunt dolorum culpa iure architecto illum accusamus explicabo quasi exercitationem deleniti iste modi, debitis officiis accusantium ullam ducimus quisquam delectus commodi mollitia rerum ab hic? Veritatis, tempore amet.</p>
+        </div>
+    </main>
     <div class="involucrate">
         <article id="dona">
             <div class="container">
-                <!-- <div class="img"><img class="img-involucrate" src="img/6B.jpg" alt="Ecocidio"></div> -->
-                <h3>Doná ahora!</h3>
-                <p>Cada dia seguimos trabajando para mejorar nuestro planeta, ayudanos!</p>
-                <p>Cualquier monto hace la diferencia!</p>
+                <h3>Doná</h3>
+                <h3>ahora!</h3>
+                <p>Cada dia seguimos trabajando para mejorar nuestro planeta, ayudanos! Cualquier monto hace la diferencia!</p>
                 <a class="dona" href="https://cafecito.app/conscientecolectivo">Hacé click acá</a>
             </div>
         </article>
         <article id="sumate">
             <div class="container">
-                <h3>Sumate a nuestro equipo y se parte de la transformación</h3>
+                <h3>Sumate al equipo!</h3>
                 <p>Acompañanos siendo parte de esta transformación! Dona tu tiempo y ayudanos a seguir luchando por un mejor planeta para todos</p>
                 <a class="sumate" href="https://docs.google.com/forms/d/e/1FAIpQLSdD_skT48_5wrUdjlV8LCl1KbKK6ziLSnZ03rjwKFSCovAynw/viewform">Hacé click acá</a>
             </div>
